Fix flyway